==> IOsonata/IOsonata/ARM/Microchip/SAM4E/src/iopincfg_sam4e.c <==
#include <stdio.h>
#include <stdbool.h>
#include "sam4e.h"
#include "coredev/iopincfg.h"
#define IOPIN_MAX_PINOP			(5)
	#define IOPIN_MAX_PORT		(5)
	#define IOPIN_MAX_PORT		(4)
	#define IOPIN_MAX_PORT		(3)
	#define IOPIN_MAX_PORT		(2)
#define IOPIN_MAX_INT			(IOPIN_MAX_PORT)

void IOPinConfig(int PortNo, int PinNo, int PinOp, IOPINDIR Dir, IOPINRES Resistor, IOPINTYPE Type)
{
	Sam4ePio *reg = (Sam4ePio *)((uint32_t)SAM4E_PIOA + PortNo * 0x200);

	if (PortNo == -1 || PinNo == -1 || PortNo > IOPIN_MAX_PORT)
		return;

	uint32_t pinmask = 1 << PinNo;

	// Enable peripheral clock
	SAM4E_PMC->PMC_PCER0 |= 1 << (9 + PortNo);

	if (PinOp > 0 && PinOp <= IOPIN_MAX_PINOP)
	{
		// Configure as peripheral
		reg->PIO_PDR = pinmask;
		
		uint8_t psel = PinOp - 1;
		
		if (psel & 1)
		{
			reg->PIO_ABCDSR[0] |= pinmask;
		}
		else
		{
			reg->PIO_ABCDSR[0] &= ~pinmask;
		}
		
		if (psel & 2)
		{
			reg->PIO_ABCDSR[1] |= pinmask;
		}
		else
		{
			reg->PIO_ABCDSR[1] &= ~pinmask;
		}
	}
	else
	{
		// Configure as GPIO	
		reg->PIO_PER = pinmask;
		
		if (Dir == IOPINDIR_OUTPUT)
		{
			reg->PIO_OER = pinmask;
			reg->PIO_OWER = pinmask;
		}
		else
		{
			reg->PIO_ODR = pinmask;
			reg->PIO_OWDR = pinmask;
		}
	}
	
	reg->PIO_PUDR = pinmask;
	reg->PIO_PPDDR = pinmask;

	switch (Resistor)
	{
		case IOPINRES_FOLLOW:
		case IOPINRES_PULLUP:
			reg->PIO_PUER = pinmask;
			break;
		case IOPINRES_PULLDOWN:
			reg->PIO_PPDER = pinmask;
			break;
		case IOPINRES_NONE:
			break;
	}

	if (Type == IOPINTYPE_OPENDRAIN)
	{
		reg->PIO_MDER = pinmask;
	}
	else
	{
		reg->PIO_MDDR = pinmask;
	}
}

void IOPinDisable(int PortNo, int PinNo)
{
	if (PortNo == -1 || PinNo == -1)
		return;

	Sam4ePio *reg = (Sam4ePio *)((uint32_t)SAM4E_PIOA + PortNo * 0x200);
	reg->PIO_PDR = 1 << PinNo;
}

void IOPinDisableInterrupt(int IntNo)
{
	if (IntNo < 0 || IntNo >= IOPIN_MAX_INT)
	{
		return;
	}

	Sam4ePio *reg = (Sam4ePio *)((uint32_t)SAM4E_PIOA + ((s_GpIOSenseEvt[IntNo].PortPinNo >> 8) & 0xFF) * 0x200);

	reg->PIO_IDR = 1 << (s_GpIOSenseEvt[IntNo].PortPinNo & 0xFF);
	
    s_GpIOSenseEvt[IntNo].PortPinNo = -1;
    s_GpIOSenseEvt[IntNo].Sense = IOPINSENSE_DISABLE;
    s_GpIOSenseEvt[IntNo].SensEvtCB = NULL;

    switch (IntNo)
    {
    	case 0:
    		NVIC_DisableIRQ(PIOA_IRQn);
    		NVIC_ClearPendingIRQ(PIOA_IRQn);
    		break;
    	case 1:
    		NVIC_DisableIRQ(PIOB_IRQn);
    		NVIC_ClearPendingIRQ(PIOB_IRQn);
    		break;
    	case 2:
    		NVIC_DisableIRQ(PIOC_IRQn);
    		NVIC_ClearPendingIRQ(PIOC_IRQn);
    		break;
    	case 3:
    		NVIC_DisableIRQ(PIOD_IRQn);
    		NVIC_ClearPendingIRQ(PIOD_IRQn);
    		break;
    	case 4:
    		NVIC_DisableIRQ(PIOE_IRQn);
    		NVIC_ClearPendingIRQ(PIOE_IRQn);
    		break;
    }
}

bool IOPinEnableInterrupt(int IntNo, int IntPrio, uint32_t PortNo, uint32_t PinNo, IOPINSENSE Sense, IOPinEvtHandler_t pEvtCB, void *pCtx)
{
	if (IntNo < 0 || IntNo >= IOPIN_MAX_INT || IntNo != PortNo)
	{
		return false;
	}

	Sam4ePio *reg = (Sam4ePio *)((uint32_t)SAM4E_PIOA + PortNo * 0x200);

	IOPinSetSense(PortNo, PinNo, Sense);
	
    s_GpIOSenseEvt[IntNo].Sense = Sense;
	s_GpIOSenseEvt[IntNo].PortPinNo = (PortNo << 8) | PinNo; // For use when disable interrupt
	s_GpIOSenseEvt[IntNo].SensEvtCB = pEvtCB;
	s_GpIOSenseEvt[IntNo].pCtx = pCtx;

	reg->PIO_IER = 1 << PinNo; 
	
	switch (IntNo)
	{
		case 0:
			NVIC_ClearPendingIRQ(PIOA_IRQn);
			NVIC_SetPriority(PIOA_IRQn, IntPrio);
			NVIC_EnableIRQ(PIOA_IRQn);
			break;
		case 1:
			NVIC_ClearPendingIRQ(PIOB_IRQn);
			NVIC_SetPriority(PIOB_IRQn, IntPrio);
			NVIC_EnableIRQ(PIOB_IRQn);
			break;
		case 2:
			NVIC_ClearPendingIRQ(PIOC_IRQn);
			NVIC_SetPriority(PIOC_IRQn, IntPrio);
			NVIC_EnableIRQ(PIOC_IRQn);
			break;
		case 3:
			NVIC_ClearPendingIRQ(PIOD_IRQn);
			NVIC_SetPriority(PIOD_IRQn, IntPrio);
			NVIC_EnableIRQ(PIOD_IRQn);
			break;
		case 4:
			NVIC_ClearPendingIRQ(PIOE_IRQn);
			NVIC_SetPriority(PIOE_IRQn, IntPrio);
			NVIC_EnableIRQ(PIOE_IRQn);
			break;
    }

    return true;
}

void IOPinSetSense(int PortNo, int PinNo, IOPINSENSE Sense)
{
	if (PortNo < 0 || PinNo < 0 || PortNo > IOPIN_MAX_PORT || PinNo > 31)
	{
		return;
	}
	
	Sam4ePio *reg = (Sam4ePio *)((uint32_t)SAM4E_PIOA + PortNo * 0x200);
	uint32_t pinmask = 1 << PinNo;
	
	switch (Sense)
	{
		case IOPINSENSE_LOW_TRANSITION:
			reg->PIO_FELLSR |= pinmask;
			reg->PIO_ESR |= pinmask;
			break;
		case IOPINSENSE_HIGH_TRANSITION:
			reg->PIO_REHLSR |= pinmask;
			reg->PIO_ESR |= pinmask;
			break;
		case IOPINSENSE_TOGGLE:
			reg->PIO_AIMDR |= pinmask;
			break;
	}
}
