==> IOsonata/IOsonata/ARM/Nordic/src/iopincfg_nrfx.c <==
#include <stdio.h>
#include <stdbool.h>
#include "nrf.h"
#include "nrf_gpiote.h"
#include "nrf_peripherals.h"
#include "coredev/iopincfg.h"
#define IOPIN_MAX_INT			(GPIOTE_CH_NUM)

void IOPinConfig(int PortNo, int PinNo, int PinOp, IOPINDIR Dir, IOPINRES Resistor, IOPINTYPE Type)
{
	uint32_t cnf = 0;

#if defined(NRF91_SERIES) || defined(NRF53_SERIES)
#ifdef NRF5340_XXAA_NETWORK
	NRF_GPIO_Type *reg = NRF_P0_NS;
#else
	NRF_GPIO_Type *reg = NRF_P0_S;

	if (PortNo & 0x80)
	{
		// non-secure access
		reg = NRF_P0_NS;
	}
#endif
#else
	NRF_GPIO_Type *reg = NRF_GPIO;

#ifdef NRF52840_XXAA
	if (PortNo == 1)
	{
		reg = NRF_P1;
	}

#endif
#endif

	if (PortNo == -1 || PinNo == -1)
		return;

	if (Dir == IOPINDIR_OUTPUT)
	{
		cnf |= (GPIO_PIN_CNF_INPUT_Disconnect << GPIO_PIN_CNF_INPUT_Pos)
               | (GPIO_PIN_CNF_DIR_Output << GPIO_PIN_CNF_DIR_Pos);
	}
	else
	{
		cnf |= (GPIO_PIN_CNF_INPUT_Connect << GPIO_PIN_CNF_INPUT_Pos)
			   | (GPIO_PIN_CNF_DIR_Input << GPIO_PIN_CNF_DIR_Pos);
	}

	switch (Resistor)
	{
		case IOPINRES_FOLLOW:	// nRF51 does not have follow mode, use pullup
		case IOPINRES_PULLUP:
			cnf |= (GPIO_PIN_CNF_PULL_Pullup << GPIO_PIN_CNF_PULL_Pos);
			break;
		case IOPINRES_PULLDOWN:
			cnf |= (GPIO_PIN_CNF_PULL_Pulldown << GPIO_PIN_CNF_PULL_Pos);
			break;
		case IOPINRES_NONE:
			cnf |= (GPIO_PIN_CNF_PULL_Disabled << GPIO_PIN_CNF_PULL_Pos);
			break;
	}

	if (Type == IOPINTYPE_OPENDRAIN)
	{
		cnf |= (GPIO_PIN_CNF_DRIVE_S0D1 << GPIO_PIN_CNF_DRIVE_Pos);
	}

	reg->PIN_CNF[PinNo] = cnf;
}

void IOPinDisable(int PortNo, int PinNo)
{
#if defined(NRF91_SERIES) || defined(NRF53_SERIES)
#ifdef NRF5340_XXAA_NETWORK
	NRF_GPIO_Type *reg = NRF_P0_NS;
#else
	NRF_GPIO_Type *reg = NRF_P0_S;

	if (PortNo & 0x80)
	{
		// non-secure access
		reg = NRF_P0_NS;
	}
#endif
#else
	NRF_GPIO_Type *reg = NRF_GPIO;

#ifdef NRF52840_XXAA
	if (PortNo == 1)
	{
		reg = NRF_P1;
	}

#endif
#endif

	if (PortNo == -1 || PinNo == -1)
		return;

	reg->PIN_CNF[PinNo] = (GPIO_PIN_CNF_INPUT_Disconnect << GPIO_PIN_CNF_INPUT_Pos);
}

void IOPinDisableInterrupt(int IntNo)
{
    if (IntNo >= IOPIN_MAX_INT)
        return;

#if defined(NRF91_SERIES) || defined(NRF53_SERIES)
#ifdef NRF5340_XXAA_NETWORK
	NRF_GPIOTE_Type *gpiotereg = NRF_GPIOTE_NS;
#else
	NRF_GPIOTE_Type *gpiotereg = NRF_GPIOTE0_S;
    if (s_GpIOSenseEvt[IntNo].PortPinNo & 0x8000)
    {
    	gpiotereg = NRF_GPIOTE1_NS;
    }
#endif
#else
    NRF_GPIOTE_Type *gpiotereg = NRF_GPIOTE;
#endif

    if (IntNo < 0)
    {
        IntNo = IOPIN_MAX_INT;
        gpiotereg->INTENCLR = GPIOTE_INTENSET_PORT_Msk;
        gpiotereg->EVENTS_PORT = 0;
    }
    else
    {
#if defined(NRF91_SERIES) || defined(NRF53_SERIES)
#ifdef NRF5340_XXAA_NETWORK
    	NRF_GPIO_Type *reg = NRF_P0_NS;
#else
    	NRF_GPIO_Type *reg = NRF_P0_S;
        if (s_GpIOSenseEvt[IntNo].PortPinNo & 0x8000)
        {
        	reg = NRF_P0_NS;
        }
#endif
#else
        NRF_GPIO_Type *reg = NRF_GPIO;

#ifdef NRF52840_XXAA
        if ((s_GpIOSenseEvt[IntNo].PortPinNo >> 8) == 1)
        {
            reg = NRF_P1;
        }

#endif
#endif
        gpiotereg->INTENCLR = (1 << IntNo);
        gpiotereg->CONFIG[IntNo] = 0;
        reg->PIN_CNF[s_GpIOSenseEvt[IntNo].PortPinNo & 0xFF] &= ~GPIO_PIN_CNF_SENSE_Msk;
    }

    s_GpIOSenseEvt[IntNo].PortPinNo = -1;
    s_GpIOSenseEvt[IntNo].Sense = IOPINSENSE_DISABLE;
    s_GpIOSenseEvt[IntNo].SensEvtCB = NULL;
    s_GpIOSenseEvt[IntNo].pCtx = NULL;

    for (int i = 0; i <= IOPIN_MAX_INT; i++)
    {
        if (s_GpIOSenseEvt[i].SensEvtCB != NULL)
            return;
    }

#if defined(NRF91_SERIES) || defined(NRF53_SERIES)
#ifdef NRF5340_XXAA_NETWORK
	NVIC_ClearPendingIRQ(GPIOTE_IRQn);
    NVIC_DisableIRQ(GPIOTE_IRQn);
#else
    if (s_GpIOSenseEvt[IntNo].PortPinNo & 0x8000)
    {
    	NVIC_ClearPendingIRQ(GPIOTE0_IRQn);
        NVIC_DisableIRQ(GPIOTE0_IRQn);
    }
    else
    {
    	NVIC_ClearPendingIRQ(GPIOTE1_IRQn);
        NVIC_DisableIRQ(GPIOTE1_IRQn);
    }
#endif
#else
    NVIC_ClearPendingIRQ(GPIOTE_IRQn);
    NVIC_DisableIRQ(GPIOTE_IRQn);
#endif

    gpiotereg->INTENCLR = 0xFFFFFFFF;
}

bool IOPinEnableInterrupt(int IntNo, int IntPrio, uint32_t PortNo, uint32_t PinNo, IOPINSENSE Sense, IOPinEvtHandler_t pEvtCB, void *pCtx)
{
    if (IntNo >= IOPIN_MAX_INT)
		return false;

#if defined(NRF91_SERIES) || defined(NRF53_SERIES)
#ifdef NRF5340_XXAA_NETWORK
    NRF_GPIOTE_Type *gpiotereg = NRF_GPIOTE_NS;
	NRF_GPIO_Type *reg = NRF_P0_NS;
#else
    NRF_GPIOTE_Type *gpiotereg = NRF_GPIOTE0_S;
	NRF_GPIO_Type *reg = NRF_P0_S;

	if (PortNo & 0x80)
	{
		// non-secure access
		reg = NRF_P0_NS;
		gpiotereg = NRF_GPIOTE1_NS;
	}
#endif
#else
	NRF_GPIO_Type *reg = NRF_GPIO;
	NRF_GPIOTE_Type *gpiotereg = NRF_GPIOTE;

#ifdef NRF52840_XXAA
	if (PortNo == 1)
	{
		reg = NRF_P1;
	}

#endif
#endif

#ifdef GPIOTE_CONFIG_PORT_Msk
#define GPIOTE_CONFIG_PORT_PIN_Msk (GPIOTE_CONFIG_PORT_Msk | GPIOTE_CONFIG_PSEL_Msk)
#else
#define GPIOTE_CONFIG_PORT_PIN_Msk GPIOTE_CONFIG_PSEL_Msk
#endif

	uint32_t cfg = 0;

	if (IntNo < 0)
	{
		IntNo = IOPIN_MAX_INT;
		gpiotereg->EVENTS_PORT = 0;
		gpiotereg->INTENSET = GPIOTE_INTENSET_PORT_Msk;

		for (int i = 0; i < 31; i++)
		{
			if ((1<<i) & PinNo)
			{
				reg->PIN_CNF[i] &= ~(GPIO_PIN_CNF_SENSE_Msk << GPIO_PIN_CNF_SENSE_Pos);
				switch (Sense)
				{
					case IOPINSENSE_LOW_TRANSITION:
						cfg = ((GPIOTE_CONFIG_POLARITY_HiToLo << GPIOTE_CONFIG_POLARITY_Pos) & GPIOTE_CONFIG_POLARITY_Msk)
													| (((i | (PortNo << 5)) << GPIOTE_CONFIG_PSEL_Pos) & GPIOTE_CONFIG_PORT_PIN_Msk)
													| (GPIOTE_CONFIG_MODE_Event << GPIOTE_CONFIG_MODE_Pos);
						reg->PIN_CNF[i] |= (GPIO_PIN_CNF_SENSE_Low << GPIO_PIN_CNF_SENSE_Pos);
						break;
					case IOPINSENSE_HIGH_TRANSITION:
						cfg = ((GPIOTE_CONFIG_POLARITY_LoToHi << GPIOTE_CONFIG_POLARITY_Pos) & GPIOTE_CONFIG_POLARITY_Msk)
													| (((i | (PortNo << 5)) << GPIOTE_CONFIG_PSEL_Pos) & GPIOTE_CONFIG_PORT_PIN_Msk)
													| (GPIOTE_CONFIG_MODE_Event << GPIOTE_CONFIG_MODE_Pos);
						reg->PIN_CNF[i] |= (GPIO_PIN_CNF_SENSE_High << GPIO_PIN_CNF_SENSE_Pos);
						break;
					case IOPINSENSE_TOGGLE:
						cfg = ((GPIOTE_CONFIG_POLARITY_Toggle << GPIOTE_CONFIG_POLARITY_Pos) & GPIOTE_CONFIG_POLARITY_Msk)
													| (((i | (PortNo << 5)) << GPIOTE_CONFIG_PSEL_Pos) & GPIOTE_CONFIG_PORT_PIN_Msk)
													| (GPIOTE_CONFIG_MODE_Event << GPIOTE_CONFIG_MODE_Pos);
						reg->PIN_CNF[i] |= (3 << GPIO_PIN_CNF_SENSE_Pos);
						break;
					default:
						;
				}

				s_GpIOSenseEvt[IntNo].Sense = Sense;
				s_GpIOSenseEvt[IntNo].PortPinNo = (PortNo << 8) | i; // For use when disable interrupt
				s_GpIOSenseEvt[IntNo].SensEvtCB = pEvtCB;
				s_GpIOSenseEvt[IntNo].pCtx = pCtx;
			}
		}
	}
	else
	{
		reg->PIN_CNF[PinNo] &= ~(GPIO_PIN_CNF_SENSE_Msk << GPIO_PIN_CNF_SENSE_Pos);
		switch (Sense)
		{
			case IOPINSENSE_LOW_TRANSITION:
				cfg = ((GPIOTE_CONFIG_POLARITY_HiToLo << GPIOTE_CONFIG_POLARITY_Pos) & GPIOTE_CONFIG_POLARITY_Msk)
											| (((PinNo | (PortNo << 5)) << GPIOTE_CONFIG_PSEL_Pos) & GPIOTE_CONFIG_PORT_PIN_Msk)
											| (GPIOTE_CONFIG_MODE_Event << GPIOTE_CONFIG_MODE_Pos);
				reg->PIN_CNF[PinNo] |= (GPIO_PIN_CNF_SENSE_Low << GPIO_PIN_CNF_SENSE_Pos);
				break;
			case IOPINSENSE_HIGH_TRANSITION:
				cfg = ((GPIOTE_CONFIG_POLARITY_LoToHi << GPIOTE_CONFIG_POLARITY_Pos) & GPIOTE_CONFIG_POLARITY_Msk)
											| (((PinNo | (PortNo << 5)) << GPIOTE_CONFIG_PSEL_Pos) & GPIOTE_CONFIG_PORT_PIN_Msk)
											| (GPIOTE_CONFIG_MODE_Event << GPIOTE_CONFIG_MODE_Pos);
				reg->PIN_CNF[PinNo] |= (GPIO_PIN_CNF_SENSE_High << GPIO_PIN_CNF_SENSE_Pos);
				break;
			case IOPINSENSE_TOGGLE:
				cfg = ((GPIOTE_CONFIG_POLARITY_Toggle << GPIOTE_CONFIG_POLARITY_Pos) & GPIOTE_CONFIG_POLARITY_Msk)
											| (((PinNo | (PortNo << 5)) << GPIOTE_CONFIG_PSEL_Pos) & GPIOTE_CONFIG_PORT_PIN_Msk)
											| (GPIOTE_CONFIG_MODE_Event << GPIOTE_CONFIG_MODE_Pos);
				reg->PIN_CNF[PinNo] |= (3 << GPIO_PIN_CNF_SENSE_Pos);
				break;
			default:
				;
		}

		gpiotereg->CONFIG[IntNo] = cfg;
		gpiotereg->INTENSET = (1 << IntNo);
	    s_GpIOSenseEvt[IntNo].Sense = Sense;
		s_GpIOSenseEvt[IntNo].PortPinNo = (PortNo << 8) | PinNo; // For use when disable interrupt
		s_GpIOSenseEvt[IntNo].SensEvtCB = pEvtCB;
		s_GpIOSenseEvt[IntNo].pCtx = pCtx;
	}

#if defined(NRF91_SERIES) || defined(NRF53_SERIES)
#ifdef NRF5340_XXAA_NETWORK
    NVIC_ClearPendingIRQ(GPIOTE_IRQn);
    NVIC_SetPriority(GPIOTE_IRQn, IntPrio);
    NVIC_EnableIRQ(GPIOTE_IRQn);
#else
	if (PortNo & 0x80)
	{
	    NVIC_ClearPendingIRQ(GPIOTE0_IRQn);
	    NVIC_SetPriority(GPIOTE0_IRQn, IntPrio);
	    NVIC_EnableIRQ(GPIOTE0_IRQn);
	}
	else
	{
	    NVIC_ClearPendingIRQ(GPIOTE1_IRQn);
	    NVIC_SetPriority(GPIOTE1_IRQn, IntPrio);
	    NVIC_EnableIRQ(GPIOTE1_IRQn);
	}
#endif
#else
    NVIC_ClearPendingIRQ(GPIOTE_IRQn);
    NVIC_SetPriority(GPIOTE_IRQn, IntPrio);
    NVIC_EnableIRQ(GPIOTE_IRQn);
#endif

    return true;
}

void IOPinSetSense(int PortNo, int PinNo, IOPINSENSE Sense)
{
#if defined(NRF91_SERIES) || defined(NRF53_SERIES)
#ifdef NRF5340_XXAA_NETWORK
	NRF_GPIO_Type *reg = NRF_P0_NS;
#else
	NRF_GPIO_Type *reg = NRF_P0_S;

	if (PortNo & 0x80)
	{
		// non-secure access
		reg = NRF_P0_NS;
	}
#endif
#else
	NRF_GPIO_Type *reg = NRF_GPIO;

#ifdef NRF52840_XXAA
	if (PortNo == 1)
	{
		reg = NRF_P1;
	}

#endif
#endif

	// Clear sense
	reg->PIN_CNF[PinNo] &= ~(GPIO_PIN_CNF_SENSE_Msk << GPIO_PIN_CNF_SENSE_Pos);
	switch (Sense)
	{
		case IOPINSENSE_DISABLE:	// Disable pin sense
			// Already done above
			break;
		case IOPINSENSE_LOW_TRANSITION:	// Event on falling edge
			reg->PIN_CNF[PinNo] |= (GPIO_PIN_CNF_SENSE_Low << GPIO_PIN_CNF_SENSE_Pos);
			break;
		case IOPINSENSE_HIGH_TRANSITION:// Event on raising edge
			reg->PIN_CNF[PinNo] |= (GPIO_PIN_CNF_SENSE_High << GPIO_PIN_CNF_SENSE_Pos);
			break;
		case IOPINSENSE_TOGGLE:			// Event on state change
			// Not supported, use sense low for now
			reg->PIN_CNF[PinNo] |= (3 << GPIO_PIN_CNF_SENSE_Pos);
			break;
	}
}
